# funrest

./: .gitignore  README.md  __main__.py  pyproject.toml  rechnung.html  schema.sql
Pläne/Datenbank/: ER-Modell.drawio
Pläne/Kostenplan/: Kostenplan.txt  Kostenplan.xlsx
Pläne/Qualitätsplan/: Qualitätsplan.txt
Pläne/Ressourcenplan/: Ressourcenplanung.xlsx
assets/Datenbank/: Bash_Database.txt  Datenbank.txt  sql-migration-script.sql
database/database-files/: Datenbank.txt  sql-migration-script.sql
docs/Ablaufplan/: ganttnotes.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: index.html
frontend/html/: agb.html  forgett.html  impressum.html  login.html  register.html  template.html
frontend/js/: index.js
frontend/style/: agb.css  home.css  impressum.css  index.css  login.css
fun/: pyvenv.cfg
fun/Scripts/: activate  activate.bat
funrest/: __init__.py  apii.py  app.py  db.py  schema.sql
funrest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
funrest/database/: Logo-funrest.drawio
funrest/static/: forgett.css  index.css  register.css  rooms.css
src/: app.py  rechnung.py
src/py/: data.json  (+6 more)
static/: about.css  admin.css  agb.css  contact.css  detail.css  forget.css  home.css  impressum.css  index.css  leistungen.css  login.css  register.css  reviews.css  reviews_user.css  rooms.css
templates/: about.html  admin.html  agb.html  contact.html  forget.html  impressum.html  index.html  leistungen.html  login.html  register.html  reviews.html  reviews_user.html  room-detail.html  rooms.html  template.html
(+30 files in other folders)
